[package]
name = "fancy-regex-macro"
version = "0.1.0"
edition = "2021"
description = "A simple macro to use a fancy_regex Regex statically"
keywords = ["macro", "macros", "regex", "fancy-regex"]
authors = ["darcy"]
license = "MIT"
documentation = "https://docs.rs/phonet/latest/fancy-regex-macro"
repository = "https://github.com/darccyy/fancy-regex-macro"
exclude = ["target"]

[dependencies]
fancy-regex = "0.11.0"
once_cell = "1.17.0"
